@@ -34,3 +34,5 @@
 /src/vm/*.o
 /src/vm/.libs/
 /src/vm/.dirstamp
+/subprojects/*/
+/subprojects/.wraplock
